--- a/series.conf
+++ b/series.conf
@@ -503,6 +503,7 @@
 
 	patches.drivers/tg3-5785-and-57780-asic-revs-not-working.patch
 	patches.fixes/irda-correctly-clean-up-self-ias_obj-on-irda_bind-failure
+	patches.fixes/drivers-net-eql-c-prevent-reading-uninitialized-stack-memory
 
 
 	########################################################
