--- a/series.conf
+++ b/series.conf
@@ -504,6 +504,7 @@
 	patches.drivers/tg3-5785-and-57780-asic-revs-not-working.patch
 	patches.fixes/irda-correctly-clean-up-self-ias_obj-on-irda_bind-failure
 	patches.fixes/drivers-net-eql-c-prevent-reading-uninitialized-stack-memory
+	patches.fixes/drivers-net-cxgb3-cxgb3_main-c-prevent-reading-uninitialized-stack-memory
 
 
 	########################################################
