--- a/series.conf
+++ b/series.conf
@@ -505,6 +505,7 @@
 	patches.fixes/irda-correctly-clean-up-self-ias_obj-on-irda_bind-failure
 	patches.fixes/drivers-net-eql-c-prevent-reading-uninitialized-stack-memory
 	patches.fixes/drivers-net-cxgb3-cxgb3_main-c-prevent-reading-uninitialized-stack-memory
+	patches.fixes/drivers-net-usb-hso-c-prevent-reading-uninitialized-memory
 
 
 	########################################################
