--- a/series.conf
+++ b/series.conf
@@ -268,6 +268,8 @@
 
 	patches.fixes/PNP-ACPI-Use-DEVICE_ACPI_HANDLE-for-device-ACPI-handle-access.patch
 
+	patches.arch/acpi-debugfs-fix-buffer-overflows-double-free.patch
+
 	########################################################
 	# CPUFREQ
 	########################################################
