--- a/series.conf
+++ b/series.conf
@@ -569,6 +569,7 @@
 	##########################################################
 	# Sound
 	##########################################################
+	patches.drivers/alsa-01-caiaq-Fix-possible-string-buffer-overflow
 
 	########################################################
 	# Other driver fixes
