--- a/series.conf
+++ b/series.conf
@@ -84,6 +84,7 @@
 	patches.fixes/seccomp-disable-tsc-option
 	patches.suse/hung_task_timeout-configurable-default
 +needs_update-33	patches.suse/sched-revert-latency-defaults
+	patches.fixes/prevent-rt_sigqueueinfo-from-spoofing.patch
 
         ########################################################
         # Architecture-specific patches. These used to be all
