--- a/series.conf
+++ b/series.conf
@@ -289,6 +289,7 @@
         # Networking, IPv6
         ########################################################
 	patches.fixes/bridge-module-get-put.patch
+	patches.fixes/bonding-Incorrect-TX-queue-offset.patch
 
 	########################################################
 	# NFS
