--- a/series.conf
+++ b/series.conf
@@ -205,6 +205,7 @@
 	patches.fixes/proc-report-errors-in-proc-map-sanely.patch
 	patches.fixes/proc-close-race-in-proc-environ.patch
 	patches.fixes/proc-auxv-require-the-target-to-be-tracable-or-yourself.patch
+	patches.fixes/proc-deal-with-races-in-proc-syscall-stack-personality.patch
 
         ########################################################
         # IPC patches
