--- a/series.conf
+++ b/series.conf
@@ -201,6 +201,7 @@
 +36	patches.fixes/aggressive-zone-reclaim.patch
 	patches.suse/readahead-request-tunables.patch
 	patches.fixes/fs-partitions-efi-c-corrupted-guid-partition-tables-can-cause-kernel-oops
+	patches.fixes/proc-pagemap-close-races-with-suid-execve.patch
 
         ########################################################
         # IPC patches
