--- a/series.conf
+++ b/series.conf
@@ -401,6 +401,7 @@
 	# Wireless Networking
 	########################################################
 	patches.suse/b43-missing-firmware-info.patch
+	patches.fixes/batman-adv-bat_socket_read-missing-checks.patch
 
 	########################################################
 	# ISDN
