--- a/series.conf
+++ b/series.conf
@@ -383,6 +383,7 @@
 	patches.drivers/ehea-modinfo.patch
 	patches.drivers/net-Allow-driver-to-limit-number-of-GSO-segments-per.patch
 	patches.drivers/sfc-Fix-maximum-number-of-TSO-segments-and-minimum-T.patch
+	patches.drivers/tcp-Apply-device-TSO-segment-limit-earlier.patch
 
 	########################################################
 	# Wireless Networking
