--- a/series.conf
+++ b/series.conf
@@ -381,6 +381,7 @@
 	########################################################
 	patches.fixes/tulip-quad-NIC-ifdown
 	patches.drivers/ehea-modinfo.patch
+	patches.drivers/net-Allow-driver-to-limit-number-of-GSO-segments-per.patch
 
 	########################################################
 	# Wireless Networking
