--- a/series.conf
+++ b/series.conf
@@ -384,6 +384,7 @@
 	patches.drivers/net-Allow-driver-to-limit-number-of-GSO-segments-per.patch
 	patches.drivers/sfc-Fix-maximum-number-of-TSO-segments-and-minimum-T.patch
 	patches.drivers/tcp-Apply-device-TSO-segment-limit-earlier.patch
+	patches.fixes/af_netlink-force-credentials-passing-CVE-2012-3520.patch
 
 	########################################################
 	# Wireless Networking
