--- a/series.conf
+++ b/series.conf
@@ -661,6 +661,9 @@
 	patches.xen/xen3-patch-3.5
 	patches.xen/xen3-patch-3.6
 	patches.xen/xen3-patch-3.7
+	patches.xen/xen3-patch-3.7.2-3
+	patches.xen/xen3-patch-3.7.3-4
+	patches.xen/xen3-patch-3.7.5-6
 
 	# ports of other patches
 	patches.xen/xen3-003-acpi_initrd_override_tables.patch
@@ -701,6 +704,7 @@
 	patches.xen/xen-netback-generalize
 	patches.xen/xen-netback-multiple-tasklets
 	patches.xen/xen-netback-kernel-threads
+	patches.xen/xen-pciback-ratelimit
 	patches.xen/xen-cxgb3
 	patches.xen/xen-dcdbas
 	patches.xen/xen-x86-panic-no-reboot
