--- a/series.conf
+++ b/series.conf
@@ -183,6 +183,7 @@
 	########################################################
 	patches.suse/b43-missing-firmware-info.patch
 	patches.suse/iwlwifi-module-firmware-ucode-fix.patch
+	patches.suse/ath9k-fix-use-after-free-in-ath9k_hif_usb_rx_cb.patch
 
 	########################################################
 	# USB
