--- a/series.conf
+++ b/series.conf
@@ -8978,6 +8978,7 @@
 	patches.suse/gve-Fix-GFP-flags-when-allocing-pages.patch
 	patches.suse/net-stmmac-configure-PTP-clock-source-prior-to-PTP-i.patch
 	patches.suse/net-stmmac-skip-only-stmmac_ptp_register-when-resume.patch
+	patches.suse/ipv4-tcp-send-zero-IPID-in-SYNACK-messages.patch
 	patches.suse/drm-vc4-Fix-deadlock-on-DSI-device-attach-error.patch
 	patches.suse/drm-panel-orientation-quirks-Add-quirk-for-the-1Netb.patch
 	patches.suse/drm-atomic-Add-the-crtc-to-affected-crtc-only-if-uap.patch
