--- a/series.conf
+++ b/series.conf
@@ -22860,6 +22860,7 @@
 	patches.suse/drm-vmwgfx-Fix-stale-file-descriptors-on-failed-user.patch
 	patches.suse/yam-fix-a-memory-leak-in-yam_siocdevprivate.patch
 	patches.suse/ipv4-tcp-send-zero-IPID-in-SYNACK-messages.patch
+	patches.suse/ipv4-avoid-using-shared-IP-generator-for-connected-s.patch
 	patches.suse/udf-Fix-NULL-ptr-deref-when-converting-from-inline-f.patch
 	patches.suse/udf-Restore-i_lenAlloc-when-inode-expansion-fails.patch
 	patches.suse/cgroup-v1-Require-capabilities-to-set-release_agent.patch
