--- a/series.conf
+++ b/series.conf
@@ -12473,6 +12473,7 @@
 
 	# tip
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
+	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
