--- a/series.conf
+++ b/series.conf
@@ -22909,6 +22909,7 @@
 	patches.suse/x86-pm-save-the-msr-validity-status-at-context-setup.patch
 	patches.suse/x86-speculation-restore-speculation-related-msrs-during-s3-resume.patch
 	patches.suse/0001-SUNRPC-Ensure-we-flush-any-closed-sockets-before-xs_.patch
+	patches.suse/openvswitch-fix-OOB-access-in-reserve_sfa_size.patch
 	patches.suse/net-sched-cls_u32-fix-netns-refcount-changes-in-u32_.patch
 	patches.suse/KVM-SEV-add-cache-flush-to-solve-SEV-cache-incoherency-issues
 	patches.suse/0001-floppy-disable-FDRAWCMD-by-default.patch
