--- a/series.conf
+++ b/series.conf
@@ -56394,6 +56394,7 @@
 	patches.suse/iio-adc-ti-tlc4541-Fix-alignment-for-DMA-safety.patch
 	patches.suse/iio-amplifiers-ad8366-Fix-alignment-for-DMA-safety.patch
 	patches.suse/driver-core-fix-potential-deadlock-in-__driver_attac.patch
+	patches.suse/HID-cp2112-prevent-a-buffer-overflow-in-cp2112_xfer.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-edif-reduce-initiator-initiator-thrashing.patch
