--- a/series.conf
+++ b/series.conf
@@ -23156,6 +23156,8 @@
 	patches.suse/0002-efi-Add-an-EFI_SECURE_BOOT-flag-to-indicate-secure-boot-mode.patch
 	patches.suse/0003-efi-Lock-down-the-kernel-if-booted-in-secure-boot-mode.patch
 	patches.suse/0004-efi-Lock-down-the-kernel-at-the-integrity-level-if-b.patch
+	# Bug 1023051 - CVE-2016-3695: kernel-source: Error injection via EINJ is allowed when securelevel is enabled
+	patches.suse/acpi-Disable-APEI-error-injection-if-the-kernel-is-lockeddown.patch
 
 	# Using the hash in MOKx to blacklist kernel module, FATE#316531
 	patches.suse/0001-MODSIGN-do-not-load-mok-when-secure-boot-disabled.patch
