--- a/series.conf
+++ b/series.conf
@@ -13244,6 +13244,7 @@
 	patches.suse/remoteproc-qcom-pas-Check-if-coredump-is-enabled.patch
 	patches.suse/remoteproc-sysmon-Wait-for-SSCTL-service-to-come-up.patch
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
+	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
 
 	########################################################
 	# end of sorted patches
