--- a/series.conf
+++ b/series.conf
@@ -29971,6 +29971,7 @@
 	patches.suse/objtool-remove-check-preventing-branches-within-alternative.patch
 	patches.suse/objtool-uniquely-identify-alternative-instruction-groups.patch
 	patches.suse/objtool-fix-orc-vs-alternatives.patch
+	patches.suse/x86-speculation-change-fill_return_buffer-to-work-with-objtool.patch
 	patches.suse/objtool-allow-no-op-cfi-ops-in-alternatives.patch
 	patches.suse/capabilities-Introduce-CAP_PERFMON-to-kernel-and-use.patch
 	patches.suse/perf-x86-rapl-Add-Ice-Lake-RAPL-support.patch
