--- a/series.conf
+++ b/series.conf
@@ -56546,6 +56546,7 @@
 	patches.suse/powerpc-watchdog-introduce-a-NMI-watchdog-s-factor.patch
 	patches.suse/powerpc-pseries-mobility-set-NMI-watchdog-factor-dur.patch
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
+	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
 
 	# out-of-tree patches
 	patches.suse/random-fix-crash-on-multiple-early-calls-to-add_bootloader_randomness.patch
