--- a/series.conf
+++ b/series.conf
@@ -9908,6 +9908,7 @@
 	patches.suse/selftests-vm-fix-clang-build-error-multiple-output-f.patch
 	patches.suse/alx-acquire-mutex-for-alx_reinit-in-alx_change_mtu.patch
 	patches.suse/net-phy-marvell-Fix-invalid-comparison-in-the-resume.patch
+	patches.suse/net-packet-fix-slab-out-of-bounds-access-in-packet_r.patch
 	patches.suse/atm-eni-Add-check-for-dma_map_single.patch
 	patches.suse/msft-hv-2553-hv_netvsc-Add-check-for-kvmalloc_array.patch
 	patches.suse/ice-fix-NULL-pointer-dereference-in-ice_update_vsi_t.patch
