--- a/series.conf
+++ b/series.conf
@@ -22888,6 +22888,7 @@
 	patches.suse/xen-gnttab-fix-gnttab_end_foreign_access-without-pag.patch
 	patches.suse/xen-netfront-react-properly-to-failing-gnttab_end_fo.patch
 	patches.suse/esp-Fix-possible-buffer-overflow-in-ESP-transformati.patch
+	patches.suse/net-packet-fix-slab-out-of-bounds-access-in-packet_r.patch
 	patches.suse/af_key-add-__GFP_ZERO-flag-for-compose_sadb_supporte.patch
 	patches.suse/exec-Force-single-empty-string-when-argv-is-empty.patch
 	patches.suse/media-v4l2-mem2mem-Apply-DST_QUEUE_OFF_BASE-on-MMAP-.patch
