--- a/series.conf
+++ b/series.conf
@@ -22933,6 +22933,7 @@
 	patches.suse/fbcon-Prevent-that-screen-size-is-smaller-than-font-.patch
 	patches.suse/fbmem-Check-virtual-screen-sizes-in-fb_set_var.patch
 	patches.suse/lockdown-Fix-kexec-lockdown-bypass-with-ima-policy.patch
+	patches.suse/xfrm-xfrm_policy-fix-a-possible-double-xfrm_pols_put.patch
 	patches.suse/netfilter-nf_queue-do-not-allow-packet-truncation-be.patch
 
 	########################################################
