--- a/series.conf
+++ b/series.conf
@@ -13744,6 +13744,7 @@
 	patches.suse/x86-speculation-Add-RSB-VM-Exit-protections.patch
 	patches.suse/x86-speculation-Add-LFENCE-to-RSB-fill-sequence.patch
 	patches.suse/fs-add-mode_strip_sgid-helper.patch
+	patches.suse/fs-Add-missing-umask-strip-in-vfs_tmpfile.patch
 	patches.suse/Revert-scripts-mod-modpost.c-permit-.cranges-secton-.patch
 	patches.suse/kbuild-dummy-tools-avoid-tmpdir-leak-in-dummy-gcc.patch
 	patches.suse/pinctrl-nomadik-Fix-refcount-leak-in-nmk_pinctrl_dt_.patch
