--- a/series.conf
+++ b/series.conf
@@ -13754,6 +13754,7 @@
 	patches.suse/drm-sun4i-dsi-Prevent-underflow-when-computing-packe.patch
 	patches.suse/drm-amd-display-Check-correct-bounds-for-stream-enco.patch
 	patches.suse/drm-amdgpu-remove-useless-condition-in-amdgpu_job_st.patch
+	patches.suse/ASoC-SOF-debug-Fix-potential-buffer-overflow-by-snpr.patch
 
 	########################################################
 	# end of sorted patches
