--- a/series.conf
+++ b/series.conf
@@ -13595,6 +13595,7 @@
 	patches.suse/0010-nvmet-auth-Diffie-Hellman-key-exchange-support.patch
 	patches.suse/0011-nvmet-auth-expire-authentication-sessions.patch
 	patches.suse/ext4-check-if-directory-block-is-within-i_size.patch
+	patches.suse/ext4-make-sure-ext4_append-always-allocates-new-bloc.patch
 	patches.suse/mbcache-don-t-reclaim-used-entries.patch
 	patches.suse/mbcache-add-functions-to-delete-entry-if-unused.patch
 	patches.suse/ext4-remove-EA-inode-entry-from-mbcache-on-inode-evi.patch
