--- a/series.conf
+++ b/series.conf
@@ -22936,6 +22936,7 @@
 	patches.suse/xfrm-xfrm_policy-fix-a-possible-double-xfrm_pols_put.patch
 	patches.suse/netfilter-nf_queue-do-not-allow-packet-truncation-be.patch
 	patches.suse/ext4-check-if-directory-block-is-within-i_size.patch
+	patches.suse/ext4-make-sure-ext4_append-always-allocates-new-bloc.patch
 
 	########################################################
 	# end of sorted patches
