--- a/series.conf
+++ b/series.conf
@@ -53375,6 +53375,7 @@
 	patches.suse/pata_legacy-fix-a-couple-uninitialized-variable-bugs.patch
 	patches.suse/ata-ahci_platform-fix-null-ptr-deref-in-ahci_platfor.patch
 	patches.suse/ocfs2-fix-data-corruption-after-conversion-from-inli.patch
+	patches.suse/ocfs2-mount-fails-with-buffer-overflow-in-strlen.patch
 	patches.suse/elfcore-correct-reference-to-CONFIG_UML.patch
 	patches.suse/vfs-check-fd-has-read-access-in-kernel_read_file_from_fd.patch
 	patches.suse/audit-fix-possible-null-pointer-dereference-in-audit.patch
