--- a/series.conf
+++ b/series.conf
@@ -10132,6 +10132,7 @@
 	patches.suse/KEYS-fix-length-validation-in-keyctl_pkey_params_get.patch
 	patches.suse/KEYS-trusted-Fix-trusted-key-backends-when-building-.patch
 	patches.suse/KEYS-trusted-Avoid-calling-null-function-trusted_key.patch
+	patches.suse/tpm-fix-reference-counting-for-struct-tpm_chip.patch
 	patches.suse/KEYS-asymmetric-enforce-that-sig-algo-matches-key-al.patch
 	patches.suse/KEYS-asymmetric-properly-validate-hash_algo-and-enco.patch
 	patches.suse/tpm-use-try_get_ops-in-tpm-space.c.patch
