--- a/series.conf
+++ b/series.conf
@@ -1390,6 +1390,7 @@
 	patches.kernel.org/5.19.4-172-iavf-Fix-NULL-pointer-dereference-in-iavf_get_.patch
 	patches.kernel.org/5.19.4-173-iavf-Fix-reset-error-handling.patch
 	patches.kernel.org/5.19.4-174-iavf-Fix-deadlock-in-initialization.patch
+	patches.kernel.org/5.19.4-175-ASoC-Intel-avs-Fix-potential-buffer-overflow-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
