--- a/series.conf
+++ b/series.conf
@@ -1434,6 +1434,7 @@
 	patches.kernel.org/5.19.4-216-net-mscc-ocelot-fix-address-of-SYS_COUNT_TX_AG.patch
 	patches.kernel.org/5.19.4-217-net-genl-fix-error-path-memory-leak-in-policy-.patch
 	patches.kernel.org/5.19.4-218-net-dsa-don-t-warn-in-dsa_port_set_state_now-w.patch
+	patches.kernel.org/5.19.4-219-net-dsa-sja1105-fix-buffer-overflow-in-sja1105.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
