--- a/series.conf
+++ b/series.conf
@@ -14131,6 +14131,7 @@
 	patches.suse/drm-udl-Sync-pending-URBs-at-the-end-of-suspend.patch
 	patches.suse/bpf-Don-t-use-tnum_range-on-array-range-checking-for.patch
 	patches.suse/ALSA-hda-sigmatel-Keep-power-up-while-beep-is-enable.patch
+	patches.suse/netfilter-nf_conntrack_irc-Tighten-matching-on-DCC-m.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
