--- a/series.conf
+++ b/series.conf
@@ -22994,6 +22994,7 @@
 	patches.suse/tty-extract-tty_flip_buffer_commit-from-tty_flip_buf.patch
 	patches.suse/tty-use-new-tty_insert_flip_string_and_push_buffer-i.patch
 	patches.suse/bpf-Don-t-use-tnum_range-on-array-range-checking-for.patch
+	patches.suse/netfilter-nf_conntrack_irc-Tighten-matching-on-DCC-m.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
