--- a/series.conf
+++ b/series.conf
@@ -13211,6 +13211,7 @@
 	patches.suse/lockdown-Fix-kexec-lockdown-bypass-with-ima-policy.patch
 	patches.suse/watchqueue-make-sure-to-serialize-wqueue-defunct-pro.patch
 	patches.suse/watch-queue-remove-spurious-double-semicolon.patch
+	patches.suse/mm-Force-TLB-flush-for-PFNMAP-mappings-before-unlink_file_vma.patch
 	patches.suse/e1000e-Enable-GPT-clock-before-sending-message-to-CS.patch
 	patches.suse/Revert-e1000e-Fix-possible-HW-unit-hang-after-an-s0i.patch
 	patches.suse/docs-net-dsa-update-probing-documentation.patch
