--- a/series.conf
+++ b/series.conf
@@ -71,6 +71,7 @@
 	# to area specific sections below.
 	########################################################
 	patches.suse/watchdog-wdat_wdt-fix-min-max-timer-value.patch
+	patches.suse/vduse-prevent-uninitialized-memory-accesses.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
