--- a/series.conf
+++ b/series.conf
@@ -13998,6 +13998,7 @@
 	patches.suse/Bluetooth-MGMT-Fixes-build-warnings-with-C-1.patch
 	patches.suse/netfilter-nf_tables-do-not-allow-SET_ID-to-refer-to-.patch
 	patches.suse/netfilter-nf_tables-do-not-allow-CHAIN_ID-to-refer-t.patch
+	patches.suse/netfilter-nf_tables-do-not-allow-RULE_ID-to-refer-to.patch
 	patches.suse/geneve-fix-TOS-inheriting-for-ipv4.patch
 	patches.suse/geneve-do-not-use-RT_TOS-for-IPv6-flowlabel.patch
 	patches.suse/can-j1939-j1939_sk_queue_activate_next_locked-replac.patch
