--- a/series.conf
+++ b/series.conf
@@ -22944,6 +22944,7 @@
 	patches.suse/ext4-check-if-directory-block-is-within-i_size.patch
 	patches.suse/ext4-make-sure-ext4_append-always-allocates-new-bloc.patch
 	patches.suse/netfilter-nf_tables-do-not-allow-SET_ID-to-refer-to-.patch
+	patches.suse/netfilter-nf_tables-do-not-allow-RULE_ID-to-refer-to.patch
 	patches.suse/net_sched-cls_route-remove-from-list-when-handle-is-.patch
 	patches.suse/net_sched-cls_route-disallow-handle-of-0.patch
 	patches.suse/af_key-Do-not-call-xfrm_probe_algs-in-parallel.patch
