--- a/series.conf
+++ b/series.conf
@@ -22149,6 +22149,7 @@
 	patches.suse/cifs-properly-invalidate-cached-root-handle-when-closing-it.patch
 	patches.suse/time-Handle-negative-seconds-correctly-in-timespec64.patch
 	patches.suse/ipc-remove-memcg-accounting-for-sops-objects-in-do_semtimedop.patch
+	patches.suse/dccp-don-t-duplicate-ccid-when-cloning-dccp-sock.patch
 	patches.suse/ibmvnic-check-failover_pending-in-login-response-2.patch
 	patches.suse/net-mlx5-FWTrace-cancel-work-on-alloc-pd-error-flow.patch
 	patches.suse/ibmvnic-check-failover_pending-in-login-response.patch
