--- a/series.conf
+++ b/series.conf
@@ -56902,6 +56902,7 @@
 	patches.suse/s390-qeth-cache-link_info-for-ethtool
 	patches.suse/Bluetooth-L2CAP-Fix-l2cap_global_chan_by_psm-regress.patch
 	patches.suse/Bluetooth-MGMT-Fixes-build-warnings-with-C-1.patch
+	patches.suse/netfilter-nf_tables-do-not-allow-CHAIN_ID-to-refer-t.patch
 	patches.suse/geneve-fix-TOS-inheriting-for-ipv4.patch
 	patches.suse/geneve-do-not-use-RT_TOS-for-IPv6-flowlabel.patch
 	patches.suse/can-ems_usb-fix-clang-s-Wunaligned-access-warning.patch
