--- a/series.conf
+++ b/series.conf
@@ -11307,6 +11307,7 @@
 	patches.suse/cpufreq-qcom-cpufreq-nvmem-fix-reading-of-PVS-Valid-.patch
 	patches.suse/fs-fd-tables-have-to-be-multiples-of-BITS_PER_LONG.patch
 	patches.suse/jfs-fix-divide-error-in-dbNextAG.patch
+	patches.suse/jfs-prevent-NULL-deref-in-diFree.patch
 	patches.suse/NFS-NFSv2-v3-clients-should-never-be-setting-NFS_CAP.patch
 	patches.suse/NFS-Use-of-mapping_set_error-results-in-spurious-err.patch
 	patches.suse/NFS-Return-valid-errors-from-nfs2-3_decode_dirent.patch
