--- a/series.conf
+++ b/series.conf
@@ -22897,6 +22897,7 @@
 	patches.suse/tpm-fix-reference-counting-for-struct-tpm_chip.patch
 	patches.suse/exec-Force-single-empty-string-when-argv-is-empty.patch
 	patches.suse/media-v4l2-mem2mem-Apply-DST_QUEUE_OFF_BASE-on-MMAP-.patch
+	patches.suse/media-em28xx-initialize-refcount-before-kref_get.patch
 	patches.suse/ALSA-pcm-Fix-races-among-concurrent-hw_params-and-hw.patch
 	patches.suse/ALSA-pcm-Fix-races-among-concurrent-read-write-and-b.patch
 	patches.suse/ALSA-pcm-Fix-races-among-concurrent-prepare-and-hw_p.patch
