--- a/series.conf
+++ b/series.conf
@@ -11569,6 +11569,7 @@
 	patches.suse/powerpc-numa-Handle-partially-initialized-numa-nodes.patch
 	patches.suse/platform-x86-samsung-laptop-Fix-an-unsigned-comparis.patch
 	patches.suse/media-rockchip-rga-do-proper-error-checking-in-probe.patch
+	patches.suse/KVM-avoid-NULL-pointer-dereference-in-kvm_dirty_ring.patch
 	patches.suse/nfsd-Fix-a-write-performance-regression.patch
 	patches.suse/SUNRPC-Fix-NFSD-s-request-deferral-on-RDMA-transport.patch
 	patches.suse/SUNRPC-Fix-the-svc_deferred_event-trace-class.patch
