--- a/series.conf
+++ b/series.conf
@@ -58713,6 +58713,7 @@
 	patches.suse/cifs-use-origin-fullpath-for-automounts.patch
 	patches.suse/0053-block-bfq-fix-possible-uaf-for-bfqq-bic.patch
 	patches.suse/scsi-qla2xxx-Fix-crash-when-I-O-abort-times-out.patch
+	patches.suse/0054-block-bfq-fix-uaf-for-bfqq-in-bfq_exit_icq_bfqq.patch
 	patches.suse/x86-bugs-Flush-IBP-in-ib_prctl_set.patch
 	patches.suse/net-ena-Use-bitmask-to-indicate-packet-redirection.patch
 	patches.suse/net-sched-atm-dont-intepret-cls-results-when-asked-t.patch
