--- a/series.conf
+++ b/series.conf
@@ -23105,6 +23105,7 @@
 	patches.suse/timers-Split-try_to_-del_timer-_sync-to-prepare-for-.patch
 	patches.suse/timers-Add-shutdown-mechanism-to-the-internal-functi.patch
 	patches.suse/timers-Provide-timer_shutdown-_sync.patch
+	patches.suse/ext4-fix-kernel-BUG-in-ext4_write_inline_data_end.patch
 	patches.suse/0001-media-dvb-usb-az6027-fix-null-ptr-deref-in-az6027_i2.patch
 	patches.suse/0001-drm-vmwgfx-Validate-the-box-size-for-the-snooped-cur.patch
 	patches.suse/bpf-propagate-precision-in-ALU-ALU64-operations.patch
