--- a/series.conf
+++ b/series.conf
@@ -23466,6 +23466,7 @@
 	patches.suse/nvmet-tcp-fix-a-crash-in-nvmet_req_complete.patch
 	patches.suse/nvmet-tcp-remove-boilerplate-code.patch
 	patches.suse/nvmet-tcp-Fix-the-H2C-expected-PDU-len-calculation.patch
+	patches.suse/xen-netback-don-t-produce-zero-size-SKB-frags.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
