--- a/series.conf
+++ b/series.conf
@@ -23401,6 +23401,7 @@
 	patches.suse/afs-Fix-refcount-underflow-from-error-handling-race.patch
 	patches.suse/fuse-dax-set-fc-dax-to-NULL-in-fuse_dax_conn_free.patch
 	patches.suse/HID-lenovo-Restrict-detection-of-patched-firmware-on.patch
+	patches.suse/atm-Fix-Use-After-Free-in-do_vcc_ioctl.patch
 	patches.suse/net-rose-Fix-Use-After-Free-in-rose_ioctl.patch
 	patches.suse/vsock-virtio-Fix-unsigned-integer-wrap-around-in-vir.patch
 	patches.suse/smb-client-fix-OOB-in-receive_encrypted_standard-.patch
