--- a/series.conf
+++ b/series.conf
@@ -15804,6 +15804,7 @@
 	patches.suse/selftests-netdevsim-fix-the-udp_tunnel_nic-test.patch
 	patches.suse/net-fill-in-MODULE_DESCRIPTION-s-for-rvu_mbox.patch
 	patches.suse/fjes-fix-memleaks-in-fjes_hw_setup.patch
+	patches.suse/netfilter-nf_tables-reject-QUEUE-DROP-verdict-parame.patch
 	patches.suse/selftests-bonding-do-not-test-arp-ns-target-with-mod.patch
 	patches.suse/xsk-make-xsk_buff_pool-responsible-for-clearing-xdp_.patch
 	patches.suse/ice-work-on-pre-XDP-prog-frag-count.patch
