--- a/series.conf
+++ b/series.conf
@@ -23193,6 +23193,7 @@
 	patches.suse/media-dvb-core-Fix-kernel-WARNING-for-blocking-opera.patch
 	patches.suse/media-dvb-core-Fix-use-after-free-due-to-race-condit.patch
 	patches.suse/net-sched-flower-fix-possible-OOB-write-in-fl_set_ge.patch
+	patches.suse/vhost-use-kzalloc-instead-of-kmalloc-followed-by-mem.patch
 	patches.suse/net-sched-cls_u32-Fix-reference-counter-leak-leading.patch
 	patches.suse/netfilter-nf_tables-incorrect-error-path-handling-wi.patch
 	patches.suse/net-nfc-Fix-use-after-free-caused-by-nfc_llcp_find_l.patch
