--- a/series.conf
+++ b/series.conf
@@ -1429,6 +1429,7 @@
 	########################################################
 	patches.suse/bcachefs-fix-incorrect-usage-of-REQ_OP_FLUSH.patch
 	patches.suse/mm-huge_memory-don-t-force-huge-page-alignment-on-32.patch
+	patches.suse/dm-limit-the-number-of-targets-and-parameter-size-ar.patch
 
 	########################################################
 	# end of sorted patches
