--- a/series.conf
+++ b/series.conf
@@ -23255,6 +23255,7 @@
 	patches.suse/nvmet-tcp-Fix-the-H2C-expected-PDU-len-calculation.patch
 	patches.suse/xen-netback-don-t-produce-zero-size-SKB-frags.patch
 	patches.suse/netfilter-nf_tables-reject-QUEUE-DROP-verdict-parame.patch
+	patches.suse/dm-limit-the-number-of-targets-and-parameter-size-ar.patch
 
 	########################################################
 	# end of sorted patches
