--- a/series.conf
+++ b/series.conf
@@ -16382,6 +16382,7 @@
 	patches.suse/dpll-fix-pin-dump-crash-for-rebound-module.patch
 	patches.suse/dpll-fix-userspace-availability-of-pins.patch
 	patches.suse/dpll-fix-register-pin-with-unregistered-parent-pin.patch
+	patches.suse/net-rds-Fix-UBSAN-array-index-out-of-bounds-in-rds_c.patch
 	patches.suse/selftest-Don-t-reuse-port-for-SO_INCOMING_CPU-test.patch
 	patches.suse/wifi-mac80211-fix-potential-sta-link-leak.patch
 	patches.suse/wifi-iwlwifi-fix-a-memory-corruption.patch
