--- a/series.conf
+++ b/series.conf
@@ -23471,6 +23471,7 @@
 	patches.suse/nvmet-tcp-remove-boilerplate-code.patch
 	patches.suse/nvmet-tcp-Fix-the-H2C-expected-PDU-len-calculation.patch
 	patches.suse/xen-netback-don-t-produce-zero-size-SKB-frags.patch
+	patches.suse/net-rds-Fix-UBSAN-array-index-out-of-bounds-in-rds_c.patch
 	patches.suse/netfilter-nf_tables-reject-QUEUE-DROP-verdict-parame.patch
 
 	# out-of-tree patches
