--- a/series.conf
+++ b/series.conf
@@ -22027,6 +22027,7 @@
 	patches.suse/iavf-use-internal-state-to-free-traffic-IRQs.patch
 	patches.suse/net-phy-prevent-stale-pointer-dereference-in-phy_ini.patch
 	patches.suse/netfilter-nft_set_pipapo-fix-improper-element-remova.patch
+	patches.suse/netfilter-nf_tables-skip-bound-chain-in-netns-releas.patch
 	patches.suse/netfilter-nf_tables-skip-bound-chain-on-rule-flush.patch
 	patches.suse/drm-client-Fix-memory-leak-in-drm_client_target_clon.patch
 	patches.suse/drm-client-Fix-memory-leak-in-drm_client_modeset_pro.patch
