--- a/series.conf
+++ b/series.conf
@@ -22757,6 +22757,7 @@
 	patches.suse/ASoC-tegra-Fix-redundant-PLLA-and-PLLA_OUT0-updates.patch
 	patches.suse/ASoC-imx-rpmsg-Set-ignore_pmdown_time-for-dai_link.patch
 	patches.suse/ASoC-imx-audmix-Fix-return-error-with-devm_clk_get.patch
+	patches.suse/netfilter-nf_tables-disallow-rule-removal-from-chain.patch
 	patches.suse/ipv4-fix-null-deref-in-ipv4_link_failure.patch
 	patches.suse/platform-x86-intel_scu_ipc-Check-status-after-timeou.patch
 	patches.suse/platform-x86-intel_scu_ipc-Check-status-upon-timeout.patch
