--- a/series.conf
+++ b/series.conf
@@ -43858,6 +43858,7 @@
 	patches.suse/ASoC-imx-audmix-Fix-return-error-with-devm_clk_get.patch
 	patches.suse/ASoC-SOF-core-Only-call-sof_ops_free-on-remove-if-th.patch
 	patches.suse/powerpc-perf-hv-24x7-Update-domain-value-check.patch
+	patches.suse/netfilter-nf_tables-disallow-rule-removal-from-chain.patch
 	patches.suse/bpf-Add-override-check-to-kprobe-multi-link-attach.patch
 	patches.suse/igc-Fix-infinite-initialization-loop-with-early-XDP-.patch
 	patches.suse/ipv4-fix-null-deref-in-ipv4_link_failure.patch
