--- a/series.conf
+++ b/series.conf
@@ -45161,6 +45161,7 @@
 	patches.suse/can-j1939-Fix-UAF-in-j1939_sk_match_filter-during-se.patch
 	patches.suse/nouveau-svm-fix-kvcalloc-argument-order.patch
 	patches.suse/drm-crtc-fix-uninitialized-variable-use-even-harder.patch
+	patches.suse/drm-amd-display-Fix-possible-buffer-overflow-in-find.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-device-ID-model-name.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
 	patches.suse/ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect_work.patch
