--- a/series.conf
+++ b/series.conf
@@ -23257,6 +23257,7 @@
 	patches.suse/net-rds-Fix-UBSAN-array-index-out-of-bounds-in-rds_c.patch
 	patches.suse/netfilter-nf_tables-reject-QUEUE-DROP-verdict-parame.patch
 	patches.suse/dm-limit-the-number-of-targets-and-parameter-size-ar.patch
+	patches.suse/net-openvswitch-limit-the-number-of-recursions-from-.patch
 
 	########################################################
 	# end of sorted patches
