--- a/series.conf
+++ b/series.conf
@@ -16773,6 +16773,7 @@
 	patches.suse/wifi-brcmfmac-Adjust-n_channels-usage-for-__counted_.patch
 	patches.suse/octeontx2-af-Initialize-maps.patch
 	patches.suse/s390-qeth-Fix-potential-loss-of-L3-IP-in-case-of-network-issues.patch
+	patches.suse/netfilter-nft_set_rbtree-skip-end-interval-element-f.patch
 	patches.suse/drm-i915-gvt-Fix-uninitialized-variable-in-handle_mm.patch
 	patches.suse/mmc-sdhci-pci-o2micro-Fix-a-warm-reboot-issue-that-d.patch
 	patches.suse/hwmon-aspeed-pwm-tacho-mutex-for-tach-reading.patch
