--- a/series.conf
+++ b/series.conf
@@ -12060,6 +12060,7 @@
 	patches.suse/platform-x86-intel-tpmi-Add-debugfs-interface.patch
 	patches.suse/doc-TPMI-Add-debugfs-documentation.patch
 	patches.suse/platform-x86-hp-bioscfg-fix-a-signedness-bug-in-hp_w.patch
+	patches.suse/platform-x86-hp-bioscfg-prevent-a-small-buffer-overf.patch
 	patches.suse/platform-x86-dell-sysman-Fix-reference-leak.patch
 	patches.suse/mlxbf-bootctl-Support-the-large-icmc-write-read.patch
 	patches.suse/mlxbf-bootctl-Support-setting-the-ARM-boot-state-to-OS-up.patch
