--- a/series.conf
+++ b/series.conf
@@ -7534,6 +7534,7 @@
 	patches.suse/selftests-bpf-test-correct-loop_entry-update-in-copy.patch
 	patches.suse/bpf-don-t-do-clean_live_states-when-state-loop_entry.patch
 	patches.suse/selftests-bpf-check-states-pruning-for-deeply-nested.patch
+	patches.suse/bpf-detect-infinite-loop-in-get_loop_entry.patch
 	patches.suse/bpf-Search-and-add-kfuncs-in-struct_ops-prologue-and.patch
 	patches.suse/x86-speculation-Remove-the-extra-ifdef-around-CALL_NOSPEC.patch
 	patches.suse/x86-mm-pat-Fix-VM_PAT-handling-when-fork-fails-in-copy_pag.patch
