--- a/series.conf
+++ b/series.conf
@@ -7537,6 +7537,7 @@
 	patches.suse/bpf-detect-infinite-loop-in-get_loop_entry.patch
 	patches.suse/bpf-make-state-dfs_depth-state-loop_entry-dfs_depth-.patch
 	patches.suse/bpf-do-not-update-state-loop_entry-in-get_loop_entry.patch
+	patches.suse/bpf-use-list_head-to-track-explored-states-and-free-.patch
 	patches.suse/bpf-Search-and-add-kfuncs-in-struct_ops-prologue-and.patch
 	patches.suse/x86-speculation-Remove-the-extra-ifdef-around-CALL_NOSPEC.patch
 	patches.suse/x86-mm-pat-Fix-VM_PAT-handling-when-fork-fails-in-copy_pag.patch
