--- a/series.conf
+++ b/series.conf
@@ -7531,6 +7531,7 @@
 	patches.suse/selftests-bpf-Introduce-__load_if_JITed-annotation-f.patch
 	patches.suse/selftests-bpf-Add-selftest-for-may_goto.patch
 	patches.suse/bpf-copy_verifier_state-should-copy-loop_entry-field.patch
+	patches.suse/selftests-bpf-test-correct-loop_entry-update-in-copy.patch
 	patches.suse/bpf-Search-and-add-kfuncs-in-struct_ops-prologue-and.patch
 	patches.suse/x86-speculation-Remove-the-extra-ifdef-around-CALL_NOSPEC.patch
 	patches.suse/x86-mm-pat-Fix-VM_PAT-handling-when-fork-fails-in-copy_pag.patch
