--- a/series.conf
+++ b/series.conf
@@ -7185,6 +7185,7 @@
 	patches.suse/ext4-define-ext4_journal_destroy-wrapper.patch
 	patches.suse/ext4-avoid-journaling-sb-update-on-error-if-journal-is-des.patch
 	patches.suse/ext4-fix-OOB-read-when-checking-dotdot-dir.patch
+	patches.suse/tracing-Fix-use-after-free-in-print_graph_function_flags-d.patch
 	patches.suse/ktest-Fix-Test-Failures-Due-to-Missing-LOG_FILE-Dire.patch
 	patches.suse/selftests-ftrace-Use-readelf-to-find-entry-point-in-uprobe.patch
 	patches.suse/kunit-qemu_configs-sparc-use-Zilog-console.patch
