--- a/series.conf
+++ b/series.conf
@@ -32071,6 +32071,7 @@
 	patches.suse/arm64-errata-Add-missing-sentinels-to-Spectre-BHB-MIDR-arr.patch
 	patches.suse/irqchip-qcom-mpm-Prevent-crash-when-trying-to-handle.patch
 	patches.suse/perf-x86-intel-KVM-Mask-PEBS_ENABLE-loaded-for-guest.patch
+	patches.suse/tracing-Fix-oob-write-in-trace_seq_to_buffer.patch
 	patches.suse/firmware-arm_scmi-Balance-device-refcount-when-destr.patch
 	patches.suse/firmware-arm_ffa-Skip-Rx-buffer-ownership-release-if.patch
 	patches.suse/arm64-dts-imx8mm-verdin-Link-reg_usdhc2_vqmmc-to-usdhc2.patch
