--- a/series.conf
+++ b/series.conf
@@ -7540,6 +7540,7 @@
 	patches.suse/bpf-use-list_head-to-track-explored-states-and-free-.patch
 	patches.suse/bpf-free-verifier-states-when-they-are-no-longer-ref.patch
 	patches.suse/bpf-fix-env-peak_states-computation.patch
+	patches.suse/bpf-abort-verification-if-env-cur_state-loop_entry-N.patch
 	patches.suse/bpf-Search-and-add-kfuncs-in-struct_ops-prologue-and.patch
 	patches.suse/x86-speculation-Remove-the-extra-ifdef-around-CALL_NOSPEC.patch
 	patches.suse/x86-mm-pat-Fix-VM_PAT-handling-when-fork-fails-in-copy_pag.patch
