--- a/series.conf
+++ b/series.conf
@@ -31657,6 +31657,7 @@
 	patches.suse/selftests-bpf-test-correct-loop_entry-update-in-copy.patch
 	patches.suse/bpf-don-t-do-clean_live_states-when-state-loop_entry.patch
 	patches.suse/selftests-bpf-check-states-pruning-for-deeply-nested.patch
+	patches.suse/bpf-abort-verification-if-env-cur_state-loop_entry-N.patch
 	patches.suse/bpf-Fix-deadlock-between-rcu_tasks_trace-and-event_m.patch
 	patches.suse/x86-speculation-Remove-the-extra-ifdef-around-CALL_NOSPEC.patch
 	patches.suse/x86-entry-Fix-ORC-unwinder-for-PUSH_REGS-with-save_ret-1.patch
