--- a/series.conf
+++ b/series.conf
@@ -50361,6 +50361,7 @@
 	patches.suse/ext4-fix-OOB-read-when-checking-dotdot-dir.patch
 	patches.suse/tpm-tpm_tis-Workaround-failed-command-reception-on-I.patch
 	patches.suse/drm-vkms-Fix-use-after-free-and-double-free-on-init-.patch
+	patches.suse/bpf-copy_verifier_state-should-copy-loop_entry-field.patch
 	patches.suse/x86-speculation-Remove-the-extra-ifdef-around-CALL_NOSPEC.patch
 	patches.suse/mptcp-fix-NULL-pointer-in-can_accept_new_subflow.patch
 	patches.suse/net-fix-geneve_opt-length-integer-overflow.patch
